--- a/src/app/pages/property-info/property-info.css
+++ b/src/app/pages/property-info/property-info.css
@@ -1,7 +1,7 @@
 
 
 html {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 .sticky-box {
@@ -16,11 +16,11 @@ html {
 
 /* styles.css or component.scss */
 body {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 :host {
   display: block;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 .property-details-box {
@@ -57,4 +57,33 @@ body {
   min-width: 100px;
   padding: 10px;
   white-space: nowrap;
+}
+
+.bookinCalender{
+  z-index: 1000 !important;
+}
+
+
+/* Make sure the sticky container works */
+.sticky-box {
+  position: sticky;
+  top: 80px; /* adjust as needed to give it some margin from the top */
+  z-index: 999; /* make sure it's above other content */
+}
+
+/* Optional: prevent page overflow due to columns */
+.property-details-box {
+  overflow: visible;
+}
+
+
+::ng-deep .blocked-line::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 4px;
+  right: 4px;
+  border-top: 2px solid red;
+  transform: translateY(-50%);
+  pointer-events: none;
 }
