--- a/src/app/pages/PropertyDetails/mapLocation/mapLocation.component.html
+++ b/src/app/pages/PropertyDetails/mapLocation/mapLocation.component.html
@@ -4,10 +4,31 @@
 <p class="title mt-10 mb-2">Where you’ll be</p>
 <p class="info mb-3"> {{title}}, {{country}}, {{city}}</p>
 
-<!-- <div *ngIf="!loading" leaflet 
+<div *ngIf="!loading" leaflet 
      [leafletOptions]="options"
      [leafletZoom]="zoom"
      [leafletCenter]="center"
      [leafletLayers]="layers"
      style="height: 300px;">
+</div>
+
+<!-- 
+<div>
+    
+     <dp-date-picker 
+     [(ngModel)]="selectedRange"
+     [config]="calendarConfig">
+     </dp-date-picker> 
 </div> -->
+
+<!-- <input
+  ngxDaterangepickerMd
+  [(ngModel)]="selected"
+  [showCustomRangeLabel]="false"
+  [linkedCalendars]="false"
+  [alwaysShowCalendars]="true"
+  [showClearButton]="true"
+  [locale]="{ applyLabel: 'OK', format: 'YYYY-MM-DD' }"
+  [ranges]="ranges"
+  []="true"
+  /> -->
