--- a/src/app/pages/PropertyDetails/propertImage-galary/propertImage-galary.component.html
+++ b/src/app/pages/PropertyDetails/propertImage-galary/propertImage-galary.component.html
@@ -6,7 +6,7 @@
   <h1 class="property-title">{{ Property?.title }}</h1>
 
   <div class="property-actions">
-    <button class="action-btn" (click)="onShare()">
+    <button class="action-btn" >
       <i class="bi bi-share-fill"></i>
       Share
     </button>
